# pecan

./: .gitattributes  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  pecan.example.toml  rustfmt.toml  setup.bash
.github/workflows/: artifacts.yml  integrity.yml
migrations/2022-04-28-031659_init/: down.sql  up.sql
migrations/2022-05-23-190446_tokens/: down.sql  up.sql
migrations/2022-05-27-021649_users/: down.sql  up.sql
migrations/2022-05-27-081559_base_columns/: down.sql  up.sql
migrations/2022-11-03-190254_device_data_unique_clause/: down.sql  up.sql
migrations/2022-11-03-190255_attachments/: down.sql  up.sql
migrations/2022-11-04-062922_device_changes/: down.sql  up.sql
migrations/2022-11-09-082802_column_ordering/: down.sql  up.sql
migrations/2022-11-09-110917_device_changes_done_automatically/: down.sql  up.sql
migrations/2023-06-29-200821_deletion_support/: down.sql  up.sql
src/: config.rs  error.rs  id_gen.rs  main.rs  util.rs
src/auth/: authenticator.rs  mod.rs  request_guard.rs  tokens.rs  users.rs
src/db/: change_log.rs  enums.rs  functions.rs  mod.rs  models.rs  schema.rs  types.rs  util.rs
src/routes/: admin.rs  api.rs  auth.rs  devices.rs  favicons.rs  file_from_memory.rs  mod.rs  svelte_pages.rs
src/sql/: default_search.sql
web/: .gitignore  package-lock.json  package.json  svelte.config.js
web/src/: app.html  constants.ts  hooks.js  stores.ts  util.ts
web/src/components/: barcode.svelte  checkoutButton.svelte  couldntConnect.svelte  datetime.svelte  deviceChanges.svelte  editDevice.svelte  editDeviceDetails.svelte  globalStyle.svelte  loading.svelte  locationSelector.svelte  multiStageButton.svelte  navBar.svelte  responseError.svelte  searchBar.svelte
web/src/routes/: admin.svelte  index.svelte  login.svelte
web/src/routes/edit/: [device].svelte  index.svelte
web/static/: base.css
