[package]
name = "inv"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/inv"
homepage = "https://github.com/zedseven/inv"
description = "An inventory management system."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0-rc.0"
rand = "0.8"
rocket = { git = "https://github.com/zedseven/Rocket", branch = "v0.4.10-diesel-v2.0.0-rc.0", features = ["tls"] }
rocket_contrib = { git = "https://github.com/zedseven/Rocket", branch = "v0.4.10-diesel-v2.0.0-rc.0", features = ["diesel_sqlite_pool", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[features]
no-build = []
