[package]
name = "pecan"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/pecan"
homepage = "https://github.com/zedseven/pecan"
description = "A simple trust-based inventory-management system for tracking devices."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0-rc.0"
rand = "0.8"
rocket = { git = "https://github.com/zedseven/Rocket", branch = "v0.5-rc-6778089-diesel-v2.0.0-rc.0", features = ["tls", "json"] }
rocket_sync_db_pools = { git = "https://github.com/zedseven/Rocket", branch = "v0.5-rc-6778089-diesel-v2.0.0-rc.0", features = ["diesel_sqlite_pool"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
# To have sqlite3.lib be linked automatically
libsqlite3-sys = { version = "0.22", default-features = false, features = ["bundled"] }

[features]
# Doesn't run `build.rs` when enabled. Used to prevent CI Clippy runs from running `build.rs`.
no-build = []
